# current-app

./: .gitignore  e2e_tester.py
ai-python/: main.py  pyproject.toml  requirements.txt
ai-python/services/: llm_gateway.py
core-node/: config.ts  package-lock.json  package.json  server.ts  tsconfig.json
core-node/services/: aiService.ts
