[project]
name = "ai-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "huggingface-hub>=1.3.1",
    "langchain-groq>=1.1.1",
    "numpy>=2.4.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
